web/src/main/resources/files/css/external/atooltip.css
/**
 *
 * Copyright 2009-2010 Streamsource AB
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

.aToolTip {
	background-color: #fff;
	font-size: 14px;
	text-align: center;
	padding: 6px;
	font-family: 'Lucida Grande', Tahoma, Arial, Verdana, sans-serif;
	color: #333;
	
	border: 1px solid #aaa;
	-moz-border-radius: 6px;
	-webkit-border-radius: 6px;
	border-radius: 6px;
	
	-moz-box-shadow: 0 0 4px #000;
	-webkit-box-shadow: 0 0 4px #000;
	box-shadow: 0 0 4px #000;
}

.aToolTip .aToolTipContent {
	position:relative;
	margin:0;
	padding:0;
}

a.aToolTipCloseBtn {
	display:block;
	height:18px;
	width:18px;
	background:url(../static/images/closeBtn.png) no-repeat;
	text-indent:-9999px;
	outline:none;
	position:absolute;
	top:-15px;
	right:-15px;
	margin:2px;
	padding:4px;
}

